tests/compile-fail/compile_fail__image_source_in_msg.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected image_source
  ┌─ <input>:5:30
  │
5 │         #pragma image_source "tests/anm-compile/th12-embedded-image-source.anm"
  │                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image_source not valid in this format


